# esp32-practice

./: README.md
battery-manager/: CMakeLists.txt  README.md
battery-manager/main/: main.c
ble-gatt-client/: CMakeLists.txt
ble-gatt-client/main/: main.c
ble-gatt-server/: sdkconfig
firebase/: CMakeLists.txt
firebase/cert/firebase/: auth.pem  (+1 more)
firebase/main/: CMakeLists.txt  Kconfig.projbuild  main.c
freertos/: CMakeLists.txt
freertos/main/: main.c
gpio/: CMakeLists.txt
gpio/main/: main.c
memory/: CMakeLists.txt
memory/main/: main.c
oled-display/: CMakeLists.txt  Dockerfile  README.md
oled-display/main/: main.c
ota/: CMakeLists.txt
ota/main/: CMakeLists.txt  main.c
rest-client/: CMakeLists.txt
rest-client/main/: CMakeLists.txt  main.c
sd_card/: CMakeLists.txt  README.md
sd_card/main/: main.c
sensors/: CMakeLists.txt  README.md
sensors/.devcontainer/: devcontainer.json
sensors/main/: CMakeLists.txt  main.c
sleep/: CMakeLists.txt
sleep/main/: main.c
storage/: CMakeLists.txt  partitions.csv
storage/files/: index.html  sample.txt
storage/main/: CMakeLists.txt  component.mk  main.c
storage/spiffs_dir/: index.html
web-server/: CMakeLists.txt  partitions.csv
web-server/html/: index.html
web-server/main/: CMakeLists.txt  main.c
wifi-connect/: sdkconfig  sdkconfig.old
wifi-connect/main/: main.c
wifi-provisioning/: CMakeLists.txt
wifi-provisioning/html/: index.html  wifi-set.html
wifi-provisioning/main/: Kconfig.projbuild  main.c
wifi-scanner/: CMakeLists.txt  README.md  sdkconfig
wifi-scanner/main/: main.c
(+52 files in other folders)
